# Backend/internal/model/models.go
@@ -2,6 +2,8 @@ package model
 
 type User struct {
 	ID       string `json:"id"`
+	Username string `json:"username"`
+	Password string `json:"-"`
 	Nickname string `json:"nickname"`
 	Avatar   string `json:"avatar"`
 	Role     string `json:"role"`
